tests/neg/t5702-neg-bad-and-wild.check
-- [E032] Syntax Error: tests/neg/t5702-neg-bad-and-wild.scala:10:22 ---------------------------------------------------
10 |      case List(1, _*,) => // error: pattern expected // error
   |                      ^
   |                      pattern expected
   |
   | longer explanation available when compiling with `-explain`
-- [E032] Syntax Error: tests/neg/t5702-neg-bad-and-wild.scala:12:23 ---------------------------------------------------
12 |      case List(1, _*3,) => // error: pattern expected // error // error
   |                       ^
   |                       pattern expected
   |
   | longer explanation available when compiling with `-explain`
-- [E032] Syntax Error: tests/neg/t5702-neg-bad-and-wild.scala:15:18 ---------------------------------------------------
15 |      case List(x*, 1) => // error: pattern expected
   |                  ^
   |                  pattern expected
   |
   | longer explanation available when compiling with `-explain`
-- [E031] Syntax Error: tests/neg/t5702-neg-bad-and-wild.scala:17:18 ---------------------------------------------------
17 |      case (1, x: _*) => // error: bad use of _* (sequence pattern not allowed)
   |                  ^
   |                  * can be used only for last argument
   |
   | longer explanation available when compiling with `-explain`
-- [E032] Syntax Error: tests/neg/t5702-neg-bad-and-wild.scala:23:17 ---------------------------------------------------
23 |    val K(ns @ _*, x) = k // error: pattern expected
   |                 ^
   |                 pattern expected
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg/t5702-neg-bad-and-wild.scala:10:21 -----------------------------------------------------------------
10 |      case List(1, _*,) => // error: pattern expected // error
   |                     ^
   |                     Values of types Null and Int cannot be compared with == or !=
-- [E006] Not Found Error: tests/neg/t5702-neg-bad-and-wild.scala:12:20 ------------------------------------------------
12 |      case List(1, _*3,) => // error: pattern expected // error // error
   |                    ^
   |                    Not found: *
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg/t5702-neg-bad-and-wild.scala:12:22 -----------------------------------------------------------------
12 |      case List(1, _*3,) => // error: pattern expected // error // error
   |                      ^
   |                      Values of types Null and Int cannot be compared with == or !=
